# business-management

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  start.sh
docker/: docker-compose.yml
src/api/v1/: apps.py  urls.py
src/api/v1/commons/permissions/: __init__.py  is_admin_or_read_only.py  is_manager_or_read_only.py  is_self_or_read_only.py  task_permission.py
src/api/v1/users/serializers/: __init__.py  company.py  meeting.py  news.py  task.py  user.py
src/api/v1/users/views/: __init__.py  company.py  meeting.py  news.py  task.py  user.py
src/apps/: apps.py
src/apps/users/migrations/: 0001_initial.py  0002_alter_user_company.py  0003_news.py  0004_alter_company_name.py  0005_user_position_alter_user_company.py  0006_alter_user_company_task.py  0007_task_rating.py  0008_meeting.py  0009_alter_user_company.py
src/apps/users/models/: __init__.py  company.py  meeting.py  news.py  task.py  user.py
src/config/: settings.py  urls.py
